--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(computer-club VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(computer-club main.cpp)
-
+target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/ParseHelpers.cpp)
