feat: begin creating logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable("${CMAKE_PROJECT_NAME}" main.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/parsing/ParseHelpers.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/Time.cpp)
+target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/Table.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/ComputerClub.cpp)
+target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/event/PrintHandler.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/event/EventHandler.cpp)
