--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required(VERSION 3.10.0)
 project(computer-club VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable("${CMAKE_PROJECT_NAME}" main.cpp)
+
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/parsing/ParseHelpers.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/Time.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/Table.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/model/ComputerClub.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/event/PrintHandler.cpp)
 target_sources("${CMAKE_PROJECT_NAME}" PRIVATE src/event/EventHandler.cpp)
+
+enable_testing()
+add_subdirectory(test)
